Attempt at fixing copy-pasting

--- a/files/tmux/.tmux.conf
+++ b/files/tmux/.tmux.conf
@@ -9,8 +9,14 @@ unbind =
 bind = select-layout tiled
 
 # switch windows
-bind-key -n M-Left previous-windows
+bind-key -n M-Left previous-window
 bind-key -n M-Right next-window
+
+# resize panes vim style
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
 
 # renumber tmux windows when one is closed
 set -g renumber-windows on
@@ -37,7 +43,7 @@ set-option -g status-right-length "120"
 set-window-option -g window-status-separator ""
 
 set-option -g status-left "#[bg=colour241,fg=colour248] #S #[bg=colour237,fg=colour241,nobold,noitalics,nounderscore]"
-set-option -g status-right "#[bg=colour237,fg=colour239 nobold, nounderscore, noitalics]#[bg=colour239,fg=colour246] #(kubectl config current-context)   #{cpu_percentage}   #{ram_percentage} #[bg=colour239,fg=colour248,nobold,noitalics,nounderscore]#[bg=colour248,fg=colour237] #h "
+set-option -g status-right "#[bg=colour237,fg=colour239 nobold, nounderscore, noitalics]#[bg=colour239,fg=colour246] #(kubectl config current-context)   #{cpu_percentage}   #{ram_percentage} #[bg=colour239,fg=colour248,nobold,noitalics,nounderscore]#[bg=colour248,fg=colour237] #h"
 set-window-option -g window-status-current-format "#[bg=colour214,fg=colour237,nobold,noitalics,nounderscore]#[bg=colour214,fg=colour239] #I #[bg=colour214,fg=colour239,bold] #W #[bg=colour237,fg=colour214,nobold,noitalics,nounderscore]"
 set-window-option -g window-status-format "#[bg=colour239,fg=colour237,noitalics]#[bg=colour239,fg=colour223] #I #[bg=colour239,fg=colour223] #W #[bg=colour237,fg=colour239,noitalics]"
 
@@ -51,12 +57,17 @@ set -s escape-time 0
 
 # set-option -g default-command "reattach-to-user-namespace -l zsh"
 
+# experimental? copy-pasting on MacOS
+bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
+
 # Plugin manager
 # Custom dir outside of .dotfiles
 set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.local/share/tmux/plugins'
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
