--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -11,6 +11,7 @@ brew "azure-cli"
 brew "fzf"
 brew "golang"
 brew "golangci-lint"
+brew "helm"
 brew "htop"
 brew "httpie"
 brew "jandedobbeleer/oh-my-posh/oh-my-posh"
