Update tmux config

--- a/files/tmux/.tmux.conf
+++ b/files/tmux/.tmux.conf
@@ -74,9 +74,10 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
 
 # vim-like copy-pasting
-# set -g @plugin 'tmux-plugins/tmux-yank'
-# set -g @yank_selection 'clipboard'
-# set -g @yank_selection_mouse 'clipboard'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @yank_selection 'clipboard'
+set -g @yank_selection_mouse 'clipboard'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
