--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -2,6 +2,7 @@ cask_args appdir: '/Applications'
 
 tap "derailed/k9s"
 tap "Azure/kubelogin"
+tap "loft-sh/tap"
 
 cask "docker"
 cask "keepingyouawake"
@@ -9,6 +10,7 @@ cask "postman"
 
 brew "awscli"
 brew "azure-cli"
+brew "coreutils"
 brew "fzf"
 brew "golang"
 brew "golangci-lint"
@@ -18,9 +20,13 @@ brew "httpie"
 brew "jandedobbeleer/oh-my-posh/oh-my-posh"
 brew "jq"
 brew "kind"
+brew "libpq"
 brew "kubelogin"
 brew "kubectx"
+brew "kustomize"
+brew "vcluster"
 brew "neovim"
+brew "nvm"
 brew "tmux"
 brew "tree"
 brew "yq"
